Fixes env variables

--- a/views/index.html
+++ b/views/index.html
@@ -17,9 +17,21 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="/style.css">
-    <script src="/client.js" defer></script>
+    <script src="https://button.glitch.me/button.js"></script>
   </head>
   <body>
+    
+  <div class="Glitch">
+    <a href="https://glitch.com/edit/#!/remix/omg-movies" class="Remix">
+    <img src="https://cdn.glitch.com/2bdfb3f8-05ef-4035-a06e-2043962a3a13%2Fremix%402x.png?1513093958726" alt="remix button" aria-label="remix" height="33">
+  </a>
+    <div class="glitchButton"></div>
+    </div>
+    
+    <div class="Tweets">
+      
+    
     <a class="twitter-timeline" href="https://twitter.com/omg_movies?ref_src=twsrc%5Etfw">Tweets by omg_movies</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+      </div>
   </body>
 </html>
