--- a/public/style.css
+++ b/public/style.css
@@ -6,3 +6,22 @@ body {
   font-family: "Benton Sans", "Helvetica Neue", helvetica, arial, sans-serif;
   margin: 2em;
 }
+
+.Glitch {
+  position: fixed;
+  top: 20px;
+  right: 20px;
+  display: flex;
+}
+
+.glitchButton {
+  margin: 0 0 0 16px;
+}
+
+.Remix {
+  margin: 5px 0 0 0;
+}
+
+.Tweets {
+  max-width: 700px;
+}
